[package]
name = "geogrid"
version = "0.1.0"
authors = ["Peter Elmers <peter.elmers@yahoo.com>"]
description = "Manipulate geographic data on a grid."
license = "mit"
documentation = "https://docs.rs/geogrid"
homepage = "https://github.com/pelmers/geogrid"
repository = "https://github.com/pelmers/geogrid"

[dependencies]
geojson = "0.5.0"
num = "0.1.37"
imagefmt = "4.0.0"
rayon = "0.6.0"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
